# QtProceduralGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
app/qml/: Main.qml
app/qml/graphics/: Environment.qml  Scene.qml  Viewport.qml
app/qml/graphics/materials/: TerrainMaterial.qml
app/qml/player/: FPSCamera.qml  FPSCharacterController.qml  Player.qml
app/shaders/terrain/: terrain.frag  terrain.vert
app/src/: main.cpp
app/src/chunks/: ChunkListModel.cpp  ChunkListModel.hpp  ChunkManager.cpp  ChunkManager.hpp
app/src/geometry/: TerrainGeometry.cpp  TerrainGeometry.hpp
app/src/input/: InputHandler.cpp  InputHandler.hpp
app/src/player/: PlayerController.cpp  PlayerController.hpp
core/include/data/: Chunk.hpp  Mesh.hpp
core/include/meshing/: MarchingCubes.cpp  MarchingCubes.hpp
core/include/noise/: PerlinNoise.hpp
core/include/utils/: Math.hpp  Vector.hpp
core/include/world/: TerrainGenerator.hpp
core/src/data/: Chunk.cpp  Mesh.cpp
core/src/meshing/: MarchingCubes.cpp
core/src/noise/: PerlinNoise.cpp
core/src/world/: TerrainGenerator.cpp
qml/graphics/: Viewport.qml
